# android-ndk-hello-libs

./: .gitignore  .gitmodules  README.md  settings.gradle
app/: build.gradle
app/src/main/cpp/: CMakeLists.txt
gradle/wrapper/: gradle-wrapper.properties
mbedtls/: build.gradle
mbedtls/src/main/cpp/: CMakeLists.txt
mklib/: build.gradle
mklib/src/main/cpp/: CMakeLists.txt  build-libs.c  build-libs.h
mklib/src/main/res/values/: strings.xml
